test/fixtures/compile_errors/alreadyDeclaredVarWhere.ion
x = a + b where
  a = 1,
  a = 2,
  b = 3
